reduce further big ass caves chance

--- a/config/immersivecavegen.cfg
+++ b/config/immersivecavegen.cfg
@@ -234,7 +234,7 @@ reduction {
     I:"Circular Cave Room Reduction Percentage"=0
 
     # Allows to make colossal caves even less common. [range: 0 ~ 100, default: 0]
-    I:"Colossal Cave Reduction Percentage"=0
+    I:"Colossal Cave Reduction Percentage"=13
 
     # Dimensions the changes will mostly not affect. [default: [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], [], []]
     S:"Dimension Blacklist" <
@@ -263,19 +263,19 @@ reduction {
      >
 
     # Allows to make maze caves even less common. [range: 0 ~ 100, default: 0]
-    I:"Maze Cave Reduction Percentage"=36
+    I:"Maze Cave Reduction Percentage"=16
 
     # Allows to make normal caves even less common. [range: 0 ~ 100, default: 0]
-    I:"Normal Cave Reduction Percentage"=53
+    I:"Normal Cave Reduction Percentage"=33
 
     # Allows to make normal ravine caves even less common. Note: Ravine caves are different from ravines/caverns! They're not the same thing! [range: 0 ~ 100, default: 0]
-    I:"Ravine Cave Reduction Percentage"=76
+    I:"Ravine Cave Reduction Percentage"=56
 
     # Allows to make regional caves even less common. [range: 0 ~ 100, default: 0]
-    I:"Regional Cave Reduction Percentage"=46
+    I:"Regional Cave Reduction Percentage"=26
 
     # Allows to make normal vertical even less common. [range: 0 ~ 100, default: 0]
-    I:"Vertical Cave Reduction Percentage"=36
+    I:"Vertical Cave Reduction Percentage"=16
 }
 
 
@@ -349,10 +349,10 @@ reduction {
     B:"Enable World Population Changes"=true
 
     # Makes the world underground a HUGE cavern system. A bit extreme, not many will like it, but the option is there. (Note: Does not work with Old Cave Gen option) [default: false]
-    B:"Exteme Cave Gen"=true
+    B:"Exteme Cave Gen"=false
 
     # Note: This will only affect caves that *can* be big. There are going to be some small caves even if you turn this to 100. Note 2: This is NOT percentages. 100 does not mean caves have 100% chance to be big, it simply means they're 100 'x' more likely to be big. [range: 0 ~ 100, default: 0]
-    I:"Extra Mega Cave Chance"=0
+    I:"Extra Mega Cave Chance"=7
 
     # 1 - Lava, 2 - Water. NOTE: As many things, doesn't support old cave gen option. [range: 1 ~ 2, default: 1]
     I:"Filled Caves Spawn Mechanism"=1
