reactivate plutonium oregen in nether

--- a/config/NuclearCraft/NCConfig.cfg
+++ b/config/NuclearCraft/NCConfig.cfg
@@ -154,7 +154,7 @@
         I:"Gen Rate"=1
 
         #  [default: true]
-        B:Generation=false
+        B:Generation=true
 
         #  [range: 1 ~ 255, default: 255]
         I:"Max Height"=255
