enable ping display

--- a/config/NecroTempusConfig.cfg
+++ b/config/NecroTempusConfig.cfg
@@ -13,7 +13,7 @@
     B:PlayerTab=true
 
     # Should draw number ping instead of the bars. [default: false, synchronized: no]
-    B:drawNumberedPing=false
+    B:drawNumberedPing=true
 
     # Should draw the players heads. [default: true, synchronized: no]
     B:drawPlayersHeads=true
