adjust oregen further

--- a/config/cofh/world/projectred.json
+++ b/config/cofh/world/projectred.json
@@ -33,6 +33,22 @@
             0
         ]
     },
+    "Rubyhigh": {
+        "template": "uniform",
+        "block": {"name": "ProjRed|Exploration:projectred.exploration.ore", "metadata": 0},
+        "material": "minecraft:stone",
+        "clusterSize": 5,
+        "numClusters": 3,
+        "minHeight": 100,
+        "maxHeight": 200,
+        "retrogen": "true",
+        "biomeRestriction": "none",
+        "biomes": [],
+        "dimensionRestriction": "whitelist",
+        "dimensions": [
+            0
+        ]
+    },
     "Sapphire": {
         "template": "uniform",
         "block": {"name": "ProjRed|Exploration:projectred.exploration.ore", "metadata": 1},
@@ -41,6 +57,22 @@
         "numClusters": 1,
         "minHeight": 0,
         "maxHeight": 16,
+        "retrogen": "true",
+        "biomeRestriction": "none",
+        "biomes": [],
+        "dimensionRestriction": "whitelist",
+        "dimensions": [
+            0
+        ]
+    },
+    "Sapphirehigh": {
+        "template": "uniform",
+        "block": {"name": "ProjRed|Exploration:projectred.exploration.ore", "metadata": 1},
+        "material": "minecraft:stone",
+        "clusterSize": 5,
+        "numClusters": 3,
+        "minHeight": 100,
+        "maxHeight": 200,
         "retrogen": "true",
         "biomeRestriction": "none",
         "biomes": [],
