adjust ores further

--- a/config/cofh/world/projectred.json
+++ b/config/cofh/world/projectred.json
@@ -38,9 +38,9 @@
         "block": {"name": "ProjRed|Exploration:projectred.exploration.ore", "metadata": 0},
         "material": "minecraft:stone",
         "clusterSize": 5,
-        "numClusters": 4,
+        "numClusters": 3,
         "minHeight": 100,
-        "maxHeight": 250,
+        "maxHeight": 150,
         "retrogen": "true",
         "biomeRestriction": "none",
         "biomes": [],
@@ -70,9 +70,9 @@
         "block": {"name": "ProjRed|Exploration:projectred.exploration.ore", "metadata": 1},
         "material": "minecraft:stone",
         "clusterSize": 5,
-        "numClusters": 4,
+        "numClusters": 3,
         "minHeight": 100,
-        "maxHeight": 250,
+        "maxHeight": 150,
         "retrogen": "true",
         "biomeRestriction": "none",
         "biomes": [],
@@ -86,9 +86,25 @@
         "block": {"name": "ProjRed|Exploration:projectred.exploration.ore", "metadata": 2},
         "material": "minecraft:stone",
         "clusterSize": 5,
-        "numClusters": 1,
+        "numClusters": 2,
         "minHeight": 0,
         "maxHeight": 16,
+        "retrogen": "true",
+        "biomeRestriction": "none",
+        "biomes": [],
+        "dimensionRestriction": "whitelist",
+        "dimensions": [
+            0
+        ]
+    },
+    "Peridothigh": {
+        "template": "uniform",
+        "block": {"name": "ProjRed|Exploration:projectred.exploration.ore", "metadata": 2},
+        "material": "minecraft:stone",
+        "clusterSize": 5,
+        "numClusters": 1,
+        "minHeight": 55,
+        "maxHeight": 75,
         "retrogen": "true",
         "biomeRestriction": "none",
         "biomes": [],
